--- a/src/assets/css/me.css
+++ b/src/assets/css/me.css
@@ -4875,10 +4875,11 @@ input[type="button"].btn-block {
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: var(--white);
+    background-color: var(--light);
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
+    margin: 10px;
 }
 
 .card > hr {
